View user complete

--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,7 @@ h1 coders.tokyo
 a(href="/users/create") New User
 ul
     each user in users
-        li= user.name
+        li
+            span= user.name
+            span &nbsp;
+            a(href="/users/" + user.id) View 
