Use Bootstrap to design and fix validation

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,10 +1,14 @@
 extends ./layouts/layout.pug
 block content
-    h1 coders.tokyo
-    a(href="/users/create") New User
-    ul
+    h2 Coders.Tokyo                  
+    table.table 
+        tr 
+            th Name 
+            th Phone
+            th Actions
         each user in users
-            li
-                span= user.name
-                span &nbsp;
-                a(href="/users/" + user.id) View 
+            tr
+                td= user.name
+                td= user.phone
+                td 
+                    a.btn.btn-light(href="/users/" + user.id) View 
