--- a/views/layouts/layout.pug
+++ b/views/layouts/layout.pug
@@ -26,5 +26,7 @@ html
                         a.dropdown-item(href='#') Something else here
                 li.nav-item
                     a.nav-link(href='/users/search') Search
+        if user 
+            p= user.name
     .container.pt-5                
       block content
