--- a/views/layouts/layout.pug
+++ b/views/layouts/layout.pug
@@ -15,6 +15,8 @@ html
                         span.sr-only (current)
                 li.nav-item
                     a.nav-link(href="/users/create") New user
+                li.nav-item
+                    a.nav-link(href="/product/show") Products
 
                 li.nav-item.dropdown
                     a#navbarDropdown.nav-link.dropdown-toggle(href='#', role='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
