--- a/views/users/create.pug
+++ b/views/users/create.pug
@@ -4,11 +4,14 @@ block content
     if errors
         each error in errors
             .alert.alert-danger= error
-    form(action="/users/create", method="POST")
+    form(action="/users/create", method="POST", enctype="multipart/form-data")
         .form-group
             label(for="Name") Name
             input#Name.form-control.mr-sm-2.mb-2(name="name", aria-label='Create', type="text", value= values ? values.name : "")
-
+        .form-group
             label(for="phone") Phone Number
             input#phone.form-control.mr-sm-2.mb-2(name="phone", aria-label='Create', type="text", value= values ? values.phone : "")
+        .form-group
+            label(for="avatar") Avatar
+            input#avatar.form-control-file.mr-sm-2.mb-2(name="avatar", type="file")
         button.btn.btn-primary(type="submit") Create
