--- a/views/layouts/layout.pug
+++ b/views/layouts/layout.pug
@@ -28,6 +28,11 @@ html
                         a.dropdown-item(href='#') Something else here
                 li.nav-item
                     a.nav-link(href='/users/search') Search
+                li.nav-item
+                    a.nav-link(href='#')
+                        span= 'Cart (' + total + ')'
+                        
+                    
         if user 
             p= user.name
     .container.pt-5                
