--- a/views/product/show.pug
+++ b/views/product/show.pug
@@ -27,4 +27,4 @@ block content
                         .card-body
                             h5.card-title= product.name
                             p.card-text= product.description
-                            a.btn.btn-primary(href='#') Buy now
+                            a.btn.btn-primary(href='/cart/add/' + product.id) Add to cart
